Add character stats panel.

--- a/RealmCharFameTracker/MainWindow.xaml
+++ b/RealmCharFameTracker/MainWindow.xaml
@@ -33,37 +33,11 @@
 					<RowDefinition Height="24"></RowDefinition>
 					<RowDefinition Height="24"></RowDefinition>
 					<RowDefinition Height="24"></RowDefinition>
-				</Grid.RowDefinitions>
-				<StackPanel Grid.Row="0" Orientation="Horizontal">
-					<TextBlock Text="Search "></TextBlock>
-					<TextBox x:Name="DungeonSearch" Width="100" TextChanged="DungeonSearch_TextChanged" KeyDown="DungeonSearch_KeyDown"></TextBox>
-				</StackPanel>
-				<StackPanel Grid.Row="1" Orientation="Horizontal">
-					<TextBlock Text="Dungeon "></TextBlock>
-					<ComboBox x:Name="DungeonList" SelectionChanged="CheckStartSelectionChanged"></ComboBox>
-				</StackPanel>
-				<StackPanel Grid.Row="2" Orientation="Horizontal">
-					<TextBlock Text="Starting Fame "></TextBlock>
-					<TextBox x:Name="StartingFame" Width="100" PreviewTextInput="Fame_PreviewTextInput" TextChanged="CheckStartTextChanged" KeyDown="StartingFame_KeyDown"></TextBox>
-				</StackPanel>
-				<StackPanel Grid.Row="3" Orientation="Horizontal">
-					<Button x:Name="StartButton" Content="Start" Margin="0,0,5,0" Click="StartButton_Click"></Button>
-					<Button x:Name="CancelButton" Content="Cancel" Margin="0,0,5,0" Click="CancelButton_Click"></Button>
-					<TextBlock x:Name="RunningText" Text=""></TextBlock>
-				</StackPanel>
-				<StackPanel Grid.Row="4" Orientation="Horizontal">
-					<TextBlock Text="End Fame "></TextBlock>
-					<TextBox x:Name="EndFame" Width="100" PreviewTextInput="Fame_PreviewTextInput" TextChanged="EndFame_TextChanged" KeyDown="EndFame_KeyDown"></TextBox>
-				</StackPanel>
-				<Button Grid.Row="5" x:Name="EndButton" Content="Finish" Click="EndButton_Click"></Button>
-			</Grid>
-			
-			<Grid Grid.Row="0" Grid.Column="1" Background="white">
-				<Grid.RowDefinitions>
 					<RowDefinition Height="24"></RowDefinition>
 					<RowDefinition Height="24"></RowDefinition>
 					<RowDefinition Height="24"></RowDefinition>
 				</Grid.RowDefinitions>
+
 				<StackPanel Grid.Row="0" Orientation="Horizontal">
 					<TextBlock Text="Search "></TextBlock>
 					<TextBox x:Name="CharacterSearch" Width="100" TextChanged="CharacterSearch_TextChanged" KeyDown="CharacterSearch_KeyDown"></TextBox>
@@ -77,15 +51,60 @@
 					<TextBox x:Name="MaxAmount" Width="25" MaxLength="1" PreviewTextInput="MaxAmount_PreviewTextInput" TextChanged="CheckStartTextChanged" KeyDown="MaxAmount_KeyDown"></TextBox>
 					<TextBlock Text=" / 8"></TextBlock>
 				</StackPanel>
+				<StackPanel Grid.Row="3" Orientation="Horizontal">
+					<TextBlock Text="Search "></TextBlock>
+					<TextBox x:Name="DungeonSearch" Width="100" TextChanged="DungeonSearch_TextChanged" KeyDown="DungeonSearch_KeyDown"></TextBox>
+				</StackPanel>
+				<StackPanel Grid.Row="4" Orientation="Horizontal">
+					<TextBlock Text="Dungeon "></TextBlock>
+					<ComboBox x:Name="DungeonList" SelectionChanged="CheckStartSelectionChanged"></ComboBox>
+				</StackPanel>
+				<StackPanel Grid.Row="5" Orientation="Horizontal">
+					<TextBlock Text="Starting Fame "></TextBlock>
+					<TextBox x:Name="StartingFame" Width="100" PreviewTextInput="Fame_PreviewTextInput" TextChanged="CheckStartTextChanged" KeyDown="StartingFame_KeyDown"></TextBox>
+				</StackPanel>
+				<StackPanel Grid.Row="6" Orientation="Horizontal">
+					<Button x:Name="StartButton" Content="Start" Margin="0,0,5,0" Click="StartButton_Click"></Button>
+					<Button x:Name="CancelButton" Content="Cancel" Margin="0,0,5,0" Click="CancelButton_Click"></Button>
+					<TextBlock x:Name="RunningText" Text=""></TextBlock>
+				</StackPanel>
+				<StackPanel Grid.Row="7" Orientation="Horizontal">
+					<TextBlock Text="End Fame "></TextBlock>
+					<TextBox x:Name="EndFame" Width="100" PreviewTextInput="Fame_PreviewTextInput" TextChanged="EndFame_TextChanged" KeyDown="EndFame_KeyDown"></TextBox>
+				</StackPanel>
+				<Button Grid.Row="8" x:Name="EndButton" Content="Finish" Click="EndButton_Click"></Button>
 			</Grid>
 
-			<Grid Grid.Row="0" Grid.Column="2" Background="white">
+			<Grid Grid.Row="0" Grid.Column="1" Background="white">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="96"></RowDefinition>
+					<RowDefinition Height="*"></RowDefinition>
+				</Grid.RowDefinitions>
+				<StackPanel Grid.Row="0">
+					<TextBlock Text="Character Stats" HorizontalAlignment="Center"></TextBlock>
+					<StackPanel Orientation="Horizontal">
+						<TextBlock Text="Search "></TextBlock>
+						<TextBox x:Name="CharStatsSearch" Width="100" TextChanged="CharStatsSearch_TextChanged" KeyDown="CharStatsSearch_KeyDown"></TextBox>
+					</StackPanel>
+					<StackPanel Orientation="Horizontal">
+						<TextBlock Text="Character "></TextBlock>
+						<ComboBox x:Name="CharStatsCombo" SelectionChanged="CharStatsCombo_SelectionChanged"></ComboBox>
+					</StackPanel>
+					<StackPanel Orientation="Horizontal">
+						<CheckBox x:Name="FilterDungeonCheck" Height="16" Click="FilterDungeonCheck_Click"></CheckBox>
+						<TextBlock Text="Filter Dungeons by this Char "></TextBlock>
+					</StackPanel>
+				</StackPanel>
+				<ListBox x:Name="CharStatsList" Grid.Row="1"></ListBox>
+			</Grid>
+
+			<Grid Grid.Row="1" Grid.Column="0" Background="white">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="32"></RowDefinition>
 					<RowDefinition Height="32"></RowDefinition>
 					<RowDefinition Height="*"></RowDefinition>
 				</Grid.RowDefinitions>
-				<TextBlock Grid.Row="0" Text="All Dungeons"></TextBlock>
+				<TextBlock Grid.Row="0" Text="All Dungeons" TextAlignment="Center"></TextBlock>
 				<ComboBox Grid.Row="1" x:Name="SortOptionCombo" SelectedIndex="0" SelectionChanged="SortOptionCombo_SelectionChanged">
 					<ComboBoxItem Content="Best f/m"></ComboBoxItem>
 					<ComboBoxItem Content="Most fame"></ComboBoxItem>
@@ -96,7 +115,7 @@
 				</ListBox>
 			</Grid>
 
-			<Grid Grid.Row="1" Grid.Column="0" Background="white">
+			<Grid Grid.Row="1" Grid.Column="1" Background="white">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="72"></RowDefinition>
 					<RowDefinition Height="*"></RowDefinition>
@@ -116,7 +135,7 @@
 				</ListBox>
 			</Grid>
 			
-			<Grid Grid.Row="1" Grid.Column="1" Background="white">
+			<Grid Grid.Row="1" Grid.Column="2" Background="white">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="32"></RowDefinition>
 					<RowDefinition Height="32"></RowDefinition>
