--- a/RealmCharFameTracker/MainWindow.xaml
+++ b/RealmCharFameTracker/MainWindow.xaml
@@ -105,12 +105,15 @@
 					<RowDefinition Height="*"></RowDefinition>
 				</Grid.RowDefinitions>
 				<TextBlock Grid.Row="0" Text="All Dungeons" TextAlignment="Center"></TextBlock>
-				<ComboBox Grid.Row="1" x:Name="SortOptionCombo" SelectedIndex="0" SelectionChanged="SortOptionCombo_SelectionChanged">
-					<ComboBoxItem Content="Best f/m"></ComboBoxItem>
-					<ComboBoxItem Content="Most fame"></ComboBoxItem>
-					<ComboBoxItem Content="Quickest time"></ComboBoxItem>
-					<ComboBoxItem Content="Times Completed"></ComboBoxItem>
-				</ComboBox>
+				<StackPanel Grid.Row="1" Orientation="Horizontal">
+					<TextBlock Text="Sort "></TextBlock>
+					<ComboBox x:Name="SortOptionCombo" SelectedIndex="0" SelectionChanged="SortOptionCombo_SelectionChanged">
+						<ComboBoxItem Content="Best f/m"></ComboBoxItem>
+						<ComboBoxItem Content="Most fame"></ComboBoxItem>
+						<ComboBoxItem Content="Quickest time"></ComboBoxItem>
+						<ComboBoxItem Content="Times Completed"></ComboBoxItem>
+					</ComboBox>
+				</StackPanel>
 				<ListBox x:Name="SortList" Grid.Row="2" SelectionChanged="SortList_SelectionChanged">
 				</ListBox>
 			</Grid>
@@ -143,12 +146,18 @@
 					<RowDefinition Height="*"></RowDefinition>
 				</Grid.RowDefinitions>
 				<TextBlock Grid.Row="0" Text="Run Entries"></TextBlock>
-				<ComboBox Grid.Row="1" x:Name="SpecificDungeonList" SelectionChanged="SpecificDungeon_SelectionChanged"></ComboBox>
-				<ComboBox Grid.Row="2" x:Name="SpecificSortCombo" SelectedIndex="0" SelectionChanged="SpecificDungeon_SelectionChanged">
-					<ComboBoxItem Content="Best f/m"></ComboBoxItem>
-					<ComboBoxItem Content="Most fame"></ComboBoxItem>
-					<ComboBoxItem Content="Quickest time"></ComboBoxItem>
-				</ComboBox>
+				<StackPanel Grid.Row="1" Orientation="Horizontal">
+					<TextBlock Text="Dungeon "></TextBlock>
+					<ComboBox x:Name="SpecificDungeonList" SelectionChanged="SpecificDungeon_SelectionChanged"></ComboBox>
+				</StackPanel>
+				<StackPanel Grid.Row="2" Orientation="Horizontal">
+					<TextBlock Text="Sort "></TextBlock>
+					<ComboBox x:Name="SpecificSortCombo" SelectedIndex="0" SelectionChanged="SpecificDungeon_SelectionChanged">
+						<ComboBoxItem Content="Best f/m"></ComboBoxItem>
+						<ComboBoxItem Content="Most fame"></ComboBoxItem>
+						<ComboBoxItem Content="Quickest time"></ComboBoxItem>
+					</ComboBox>
+				</StackPanel>
 				<ListBox x:Name="SpecificSortList" Grid.Row="3" SelectionChanged="SortList_SelectionChanged">
 				</ListBox>
 			</Grid>
